# Zappy

./: .gitignore  .gitmodules  Doxyfile  Makefile  README.md  aaa  documentation.h  iav1.py
zappy_3D/: steak.blend
zappy_ai/: Doxyfile  action_type.py  ai_doc  aiv1.py  butler_loop  butler_loop.py  common,py  common.py  communication.py  connect.py  datatypes.py  gatherer_loop  gatherer_loop.py  inopinated.py  queen_loop  queen_loop.py  server_action.py  server_get.py  unexpected.py  warrior_loop  warrior_loop.py  zappy_ai  zappy_ai.py
zappy_gui/: .gitignore  Cargo.toml  Makefile
zappy_gui/benches/: benches.rs
zappy_gui/src/: arguments.rs  data.rs  incantation.rs  interpreter.rs  lib.rs  main.rs  map.rs  message.rs  model.rs  network.rs  server.rs  tantorian.rs  ui.rs  zappy.rs
zappy_gui/src/obj_parser/: mod.rs  solver.rs
zappy_gui/src/old/: tempmain.rs
zappy_gui/src/server/: communication.rs
zappy_gui/src/shaders/: fs.wgsl  map.wgsl  vs.wgsl
zappy_server/: .gitignore  Makefile  README_GUI.md  README_IA.md  structure.uxf
zappy_server/include/: common.h  error_handling.h  gui.h  ia.h  map.h  parser.h  server.h  teams.h  zappy.h
zappy_server/src/: error_handling.c  find_ia.c  listening_socket.c  main.c  my_str_to_word_array.c  parse_client_data.c  parser.c  update_life.c  update_map.c  update_msg_queue.c
zappy_server/src/commands/: check_command.c  choose_command.c  client_undefined.c  common_functions.c  common_functions_bis.c  create_struct_command.c  find_ia_for_command.c
zappy_server/src/set_structure/: set_client.c  set_common.c  set_gui.c  (+5 more)
(+93 files in other folders)
