[package]
name = "zappy_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rend_ox = { path = "src/rend_ox" }
getopts = "0.2"
regex = "1"
fork = "0.1.22"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false
